--- a/app/src/main/res/layout/fragment_contact_detail.xml
+++ b/app/src/main/res/layout/fragment_contact_detail.xml
@@ -8,15 +8,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        
+        android:layout_height="match_parent"
+        android:layout_margin="5dp">
+
         <LinearLayout
             android:id="@+id/linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_alignParentTop="true">
-            
+
             <ImageView
                 android:id="@+id/icon"
                 android:layout_width="100dp"
@@ -40,54 +41,141 @@
                     android:layout_height="wrap_content"
                     android:text="@string/name"
                     android:textStyle="bold"
+                    android:textAppearance="?android:textAppearanceLarge"
                     android:layout_marginBottom="@dimen/list_text_padding_bottom"/>
 
                 <TextView
                     android:layout_marginTop="@dimen/list_item_padding_top"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Company:"
+                    android:text="@string/company"
                     />
                 <TextView
                     android:id="@+id/company_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Company Name"
+                    android:text="@string/company"
                     android:textStyle="bold"
+                    android:textAppearance="?android:textAppearanceLarge"
                     />
-
             </LinearLayout>
+
+            <!--Phone-->
+
         </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linear2"
+                android:layout_below="@id/linear1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/phone"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/phone_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="555-555-5555"
+                        android:textStyle="bold"
+                        android:layout_alignParentLeft="true"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Home"
+                        android:textStyle="bold"
+                        android:layout_alignParentEnd="true"/>
+                </RelativeLayout>
+
 
             </LinearLayout>
 
-
+        <!--Address-->
             <LinearLayout
                 android:id="@+id/linear3"
+                android:layout_above="@id/linear4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Address:"/>
+
+                <TextView
+                    android:id="@+id/street_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Street"
+                    android:textStyle="bold"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/city_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Street"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/state_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="State"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/zip_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Street"
+                        android:textStyle="bold"/>
+                </LinearLayout>
 
 
             </LinearLayout>
 
 
+        <!--Birthday-->
             <LinearLayout
                 android:id="@+id/linear4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layout_above="@id/linear5">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Birthday"/>
+
+                <TextView
+                    android:id="@+id/birthday_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Birthday For Real"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
+        <!--Email-->
 
             <LinearLayout
                 android:id="@+id/linear5"
@@ -96,12 +184,39 @@
                 android:orientation="vertical"
                 android:layout_alignParentBottom="true">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email:"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/email_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="happy@gilmore.com"
+                        android:textStyle="bold"
+                        android:layout_alignParentLeft="true"/>
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Work"
+                        android:textStyle="bold"
+                        android:layout_alignParentEnd="true"/>
+                </RelativeLayout>
+
 
             </LinearLayout>
-            
 
-        
-        
-        
+
+
+
+
     </RelativeLayout>
 </FrameLayout>
